--- a/app/src/main/res/layout/activity_song_player.xml
+++ b/app/src/main/res/layout/activity_song_player.xml
@@ -27,6 +27,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/song_player_duration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/song_player_url"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:autoLink="web"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,6 +63,4 @@
             android:layout_weight="1"
             android:src="@drawable/baseline_skip_next_black_36"/>
     </LinearLayout>
-
-
 </LinearLayout>
