--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,16 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="player_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColor">@android:color/holo_green_light</item>
+        <item name="android:layout_height">20dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="player_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
 </resources>
